syntax = "proto3";

option go_package = "/generated";
option java_package = "generated";

message Instance {
  string name = 1;
  string addr = 2;
  string platform = 3;
  string language = 4;
  string protocol = 5;
}

message Invocation {
  string host = 1;
  int32 port = 2;
  repeated Instance instances = 3;
}

message FetchRequest {}

message FetchResponse {
  repeated Instance instances = 1;
}

message InvokeRequest {
  repeated Invocation invocations = 1;
}

message InvokeResponse {
  map<string, Invocation> results = 1;
}

service Function {
  rpc fetch(FetchRequest) returns (FetchResponse) {}
  rpc invoke(InvokeRequest) returns (InvokeResponse) {}
}
